--- a/index.html
+++ b/index.html
@@ -1,328 +1,254 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Battle Royale Triangles Web</title>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    canvas {
-      background: #000;
-      display: block;
-      touch-action: none;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Space Invaders Triangles</title>
+<style>
+  body { margin: 0; overflow: hidden; background: black; }
+  canvas { display: block; margin: 0 auto; background: black; }
+  #shootBtn, #shopBtn, #pauseBtn, #restartBtn {
+    position: absolute; padding: 10px; border-radius: 8px;
+    background: grey; color: white; font-weight: bold; user-select: none;
+  }
+  #shootBtn { right: 20px; bottom: 120px; width: 100px; height: 60px; }
+  #shopBtn { left: 50%; transform: translateX(-50%); bottom: 120px; width: 120px; height: 40px; }
+  #pauseBtn { left: 50%; transform: translateX(-50%); bottom: 60px; width: 120px; height: 40px; }
+  #restartBtn { left: 50%; transform: translateX(-50%); top: 50%; display:none; width: 140px; height: 50px; }
+</style>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="600"></canvas>
+<canvas id="gameCanvas" width="800" height="600"></canvas>
+<button id="shootBtn">TIR</button>
+<button id="shopBtn">SHOP</button>
+<button id="pauseBtn">PAUSE</button>
+<button id="restartBtn">RECOMMENCER</button>
 
-  <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+<script>
+const canvas = document.getElementById('gameCanvas');
+const ctx = canvas.getContext('2d');
+const WIDTH = canvas.width;
+const HEIGHT = canvas.height;
 
-    const WIDTH = canvas.width;
-    const HEIGHT = canvas.height;
+// --- Player ---
+let player = {x: WIDTH/2, y: HEIGHT-60, size: 15, speed: 5, lives: 3};
 
-    // --- Joueur ---
-    let playerX = WIDTH / 2;
-    let playerY = HEIGHT - 60;
-    let playerSize = 15;
-    let playerSpeed = 5;
-    let lives = 3;
-    let invulnerable = false;
-    let invulnTimer = 0;
+// --- Game ---
+let bullets = [];
+let enemies = [];
+let specialEnemies = [];
+let score = 0;
+let spaceCoins = parseInt(localStorage.getItem('spaceCoins')) || 0;
+let shopOpen = false;
+let paused = false;
+let gameOver = false;
 
-    // --- Ennemis ---
-    let enemies = [];
-    let enemySpawnRate = 100; // spawn toutes les 100 ms
-    setInterval(() => {
-      if (!shopOpen) {
-        enemies.push({x: Math.random() * (WIDTH - 40) + 20, y: 0});
-      }
-    }, enemySpawnRate);
+// --- Fire delay ---
+let lastShotTime = 0;
+const fireDelay = 300; // ms
 
-    // --- Projectiles ---
-    let bullets = [];
-    let lastShot = 0;
-    let bulletDelay = 300;
+// --- Controls ---
+let keys = {left:false,right:false,space:false};
 
-    // --- Score et Spacecoins ---
-    let score = 0;
-    let spacecoins = parseInt(localStorage.getItem("spacecoins") || "0");
+// --- Shop ---
+const shopItems = [
+  {name:"Speed x2", cost:10000, bought:false},
+  {name:"Invuln 1min", cost:20000, bought:false}
+];
+let shopMessage = "";
+let shopMessageTimer = 0;
 
-    function saveSpacecoins() {
-      localStorage.setItem("spacecoins", spacecoins);
-    }
+// --- Enemy spawn ---
+setInterval(()=>{
+  if(!paused && !shopOpen && !gameOver){
+    const speed = 1 + Math.random()*2;
+    enemies.push({x: Math.random()*(WIDTH-30)+15, y:0, speed:speed});
+  }
+},100); // 100 ms
 
-    // --- Shop ---
-    let shopOpen = false;
-    let shopMessage = "";
-    let shopMessageTimer = 0;
+// --- Special Enemy spawn ---
+setInterval(()=>{
+  if(!paused && !shopOpen && !gameOver){
+    specialEnemies.push({x: Math.random()*(WIDTH-30)+15, y:0, speed:1.5});
+  }
+},900000); // 15 minutes
 
-    // --- Zones tactiles ---
-    const buttons = {
-      shoot: {x: WIDTH - 120, y: HEIGHT - 100, w: 100, h: 80, label: "SHOOT"},
-      shop: {x: WIDTH / 2 - 60, y: HEIGHT - 100, w: 120, h: 40, label: "SHOP"}
-    };
+// --- Input ---
+document.addEventListener('keydown', e=>{
+  if(e.key==="ArrowLeft") keys.left=true;
+  if(e.key==="ArrowRight") keys.right=true;
+  if(e.key===" ") keys.space=true;
+});
+document.addEventListener('keyup', e=>{
+  if(e.key==="ArrowLeft") keys.left=false;
+  if(e.key==="ArrowRight") keys.right=false;
+  if(e.key===" ") keys.space=false;
+});
 
-    // --- Joystick ---
-    const joystick = {
-      baseX: 80, baseY: HEIGHT - 80, radius: 50,
-      active: false, dx: 0
-    };
+// --- Touch buttons ---
+document.getElementById('shootBtn').addEventListener('click', shoot);
+document.getElementById('shopBtn').addEventListener('click', ()=>{
+  shopOpen=!shopOpen;
+});
+document.getElementById('pauseBtn').addEventListener('click', ()=>{
+  paused=!paused;
+});
+document.getElementById('restartBtn').addEventListener('click', ()=>{
+  restartGame();
+  document.getElementById('restartBtn').style.display='none';
+});
 
-    // --- Dessins ---
-    function drawPlayer() {
-      ctx.fillStyle = "white";
+// --- Shoot ---
+function shoot(){
+  const now = Date.now();
+  if(now - lastShotTime < fireDelay) return;
+  bullets.push({x:player.x, y:player.y - player.size, speed:7});
+  lastShotTime = now;
+}
+
+// --- Restart ---
+function restartGame(){
+  player.lives=3;
+  player.x=WIDTH/2;
+  player.y=HEIGHT-60;
+  bullets=[];
+  enemies=[];
+  specialEnemies=[];
+  score=0;
+  gameOver=false;
+}
+
+// --- Game loop ---
+function loop(){
+  ctx.clearRect(0,0,WIDTH,HEIGHT);
+
+  if(!paused && !shopOpen && !gameOver){
+    // --- Player movement ---
+    if(keys.left && player.x-player.size>0) player.x-=player.speed;
+    if(keys.right && player.x+player.size<WIDTH) player.x+=player.speed;
+    if(keys.space) shoot();
+
+    // --- Draw player ---
+    ctx.fillStyle="white";
+    ctx.beginPath();
+    ctx.moveTo(player.x, player.y - player.size);
+    ctx.lineTo(player.x - player.size, player.y + player.size);
+    ctx.lineTo(player.x + player.size, player.y + player.size);
+    ctx.closePath();
+    ctx.fill();
+
+    // --- Bullets ---
+    bullets.forEach((b,i)=>{
+      b.y -= b.speed;
+      ctx.fillStyle="green";
       ctx.beginPath();
-      ctx.moveTo(playerX, playerY - playerSize);
-      ctx.lineTo(playerX - playerSize, playerY + playerSize);
-      ctx.lineTo(playerX + playerSize, playerY + playerSize);
-      ctx.closePath();
+      ctx.arc(b.x,b.y,5,0,Math.PI*2);
       ctx.fill();
-    }
-
-    function drawEnemy(enemy) {
-      ctx.fillStyle = "red";
-      ctx.beginPath();
-      ctx.moveTo(enemy.x, enemy.y - 15);
-      ctx.lineTo(enemy.x - 15, enemy.y + 15);
-      ctx.lineTo(enemy.x + 15, enemy.y + 15);
-      ctx.closePath();
-      ctx.fill();
-    }
-
-    function drawBullet(bullet) {
-      ctx.fillStyle = "green";
-      ctx.beginPath();
-      ctx.arc(bullet.x, bullet.y, 5, 0, Math.PI * 2);
-      ctx.fill();
-    }
-
-    function drawText(text, size, x, y, color="white") {
-      ctx.fillStyle = color;
-      ctx.font = size + "px Arial";
-      ctx.fillText(text, x, y);
-    }
-
-    function drawButtons() {
-      for (let key in buttons) {
-        let b = buttons[key];
-        ctx.fillStyle = "grey";
-        ctx.fillRect(b.x, b.y, b.w, b.h);
-        ctx.fillStyle = "white";
-        ctx.font = "20px Arial";
-        ctx.fillText(b.label, b.x + 10, b.y + 30);
-      }
-    }
-
-    function drawJoystick() {
-      ctx.strokeStyle = "grey";
-      ctx.beginPath();
-      ctx.arc(joystick.baseX, joystick.baseY, joystick.radius, 0, Math.PI*2);
-      ctx.stroke();
-      ctx.fillStyle = "lightgrey";
-      ctx.beginPath();
-      ctx.arc(joystick.baseX + joystick.dx, joystick.baseY, 25, 0, Math.PI*2);
-      ctx.fill();
-    }
-
-    function drawShop() {
-      ctx.fillStyle = "purple";
-      ctx.fillRect(0, 0, WIDTH, HEIGHT);
-      drawText("=== SHOP SPACECOINS ===", 40, WIDTH/2 - 200, 50);
-      drawText("1) Speed x2 (150 Spacecoins)", 30, 200, 150);
-      drawText("2) Invulnérabilité 10s (500 Spacecoins)", 30, 200, 200);
-      drawText("Tes Spacecoins: " + spacecoins, 30, 200, 300);
-
-      if (shopMessage && Date.now() < shopMessageTimer) {
-        drawText(shopMessage, 30, 200, 400, "red");
-      }
-
-      // Croix pour fermer
-      ctx.fillStyle = "red";
-      ctx.fillRect(WIDTH - 60, 20, 40, 40);
-      ctx.fillStyle = "white";
-      ctx.font = "30px Arial";
-      ctx.fillText("X", WIDTH - 50, 50);
-    }
-
-    // --- Gestion tactile ---
-    function handleTouch(e) {
-      const rect = canvas.getBoundingClientRect();
-      const x = e.touches ? e.touches[0].clientX - rect.left : e.offsetX;
-      const y = e.touches ? e.touches[0].clientY - rect.top : e.offsetY;
-
-      if (shopOpen) {
-        // Fermer boutique
-        if (x > WIDTH - 60 && x < WIDTH - 20 && y > 20 && y < 60) {
-          shopOpen = false;
-          return;
-        }
-        // Acheter Speed
-        if (x > 200 && x < 600 && y > 120 && y < 170) {
-          if (spacecoins >= 150) {
-            playerSpeed = 10;
-            spacecoins -= 150;
-            saveSpacecoins();
-            shopMessage = "✅ Speed x2 acheté !";
-            shopMessageTimer = Date.now() + 2000;
-          } else {
-            shopMessage = "❌ Pas assez de Spacecoins";
-            shopMessageTimer = Date.now() + 2000;
-          }
-        }
-        // Acheter Invulnérabilité
-        if (x > 200 && x < 700 && y > 170 && y < 220) {
-          if (spacecoins >= 500) {
-            invulnerable = true;
-            invulnTimer = Date.now();
-            spacecoins -= 500;
-            saveSpacecoins();
-            shopMessage = "✅ Invulnérabilité activée !";
-            shopMessageTimer = Date.now() + 2000;
-          } else {
-            shopMessage = "❌ Pas assez de Spacecoins";
-            shopMessageTimer = Date.now() + 2000;
-          }
-        }
-        return;
-      }
-
-      // Boutons tactiles
-      for (let key in buttons) {
-        let b = buttons[key];
-        if (x > b.x && x < b.x+b.w && y > b.y && y < b.y+b.h) {
-          if (key === "shoot") {
-            if (Date.now() - lastShot > bulletDelay) {
-              bullets.push({x: playerX, y: playerY - playerSize});
-              lastShot = Date.now();
-            }
-          } else if (key === "shop") {
-            shopOpen = !shopOpen;
-          }
-        }
-      }
-
-      // Joystick
-      const dx = x - joystick.baseX;
-      const dy = y - joystick.baseY;
-      if (Math.hypot(dx, dy) < joystick.radius) {
-        joystick.active = true;
-        joystick.dx = dx;
-      }
-    }
-
-    canvas.addEventListener("mousedown", handleTouch);
-    canvas.addEventListener("touchstart", handleTouch);
-
-    canvas.addEventListener("mouseup", () => { joystick.active = false; joystick.dx = 0; });
-    canvas.addEventListener("touchend", () => { joystick.active = false; joystick.dx = 0; });
-
-    // --- Gestion clavier ---
-    let keys = {};
-    document.addEventListener("keydown", (e) => {
-      keys[e.code] = true;
-      if (e.code === "Space") {
-        if (Date.now() - lastShot > bulletDelay && !shopOpen) {
-          bullets.push({x: playerX, y: playerY - playerSize});
-          lastShot = Date.now();
-        }
-      }
-      if (e.code === "KeyS") {
-        shopOpen = !shopOpen;
-      }
+      if(b.y<0) bullets.splice(i,1);
     });
-    document.addEventListener("keyup", (e) => { keys[e.code] = false; });
 
-    // --- Boucle principale ---
-    function gameLoop() {
-      ctx.clearRect(0, 0, WIDTH, HEIGHT);
-
-      if (!shopOpen) {
-        // Déplacements joueur (joystick ou clavier)
-        if (joystick.active) {
-          if (joystick.dx < -10 && playerX - playerSize > 0) playerX -= playerSpeed;
-          if (joystick.dx > 10 && playerX + playerSize < WIDTH) playerX += playerSpeed;
-        } else {
-          if (keys["ArrowLeft"] && playerX - playerSize > 0) playerX -= playerSpeed;
-          if (keys["ArrowRight"] && playerX + playerSize < WIDTH) playerX += playerSpeed;
-        }
-
-        // Déplacement bullets
-        bullets.forEach((b, i) => {
-          b.y -= 7;
-          if (b.y < 0) bullets.splice(i, 1);
-        });
-
-        // Déplacement ennemis
-        enemies.forEach((e, i) => {
-          e.y += 2;
-          if (e.y > HEIGHT) enemies.splice(i, 1);
-        });
-
-        // Collisions bullets/enemies
-        bullets.forEach((b, bi) => {
-          enemies.forEach((e, ei) => {
-            if (Math.abs(b.x - e.x) < 20 && Math.abs(b.y - e.y) < 20) {
-              enemies.splice(ei, 1);
-              bullets.splice(bi, 1);
-              score += 10;
-              if (score % 50 === 0) {
-                spacecoins++;
-                saveSpacecoins();
-              }
-            }
-          });
-        });
-
-        // Collisions joueur/enemies
-        enemies.forEach((e, i) => {
-          if (Math.abs(playerX - e.x) < 20 && Math.abs(playerY - e.y) < 20) {
-            if (!invulnerable) {
-              lives--;
-              invulnerable = true;
-              invulnTimer = Date.now();
-            }
-            enemies.splice(i, 1);
-          }
-        });
-
-        if (invulnerable && Date.now() - invulnTimer > 2000) {
-          invulnerable = false;
-        }
-
-        if (lives <= 0) {
-          score = 0;
-          lives = 3;
-          playerX = WIDTH / 2;
-          enemies = [];
-          bullets = [];
-        }
-
-        // Dessins
-        drawPlayer();
-        enemies.forEach(drawEnemy);
-        bullets.forEach(drawBullet);
-        drawText("Score: " + score, 20, 10, 20);
-        drawText("Spacecoins: " + spacecoins, 20, 10, 40);
-        drawText("Vies: " + lives, 20, 10, 60);
-        drawButtons();
-        drawJoystick();
-      } else {
-        drawShop();
+    // --- Enemies ---
+    enemies.forEach((e,i)=>{
+      e.y+=e.speed;
+      ctx.fillStyle="red";
+      ctx.beginPath();
+      ctx.moveTo(e.x,e.y-15);
+      ctx.lineTo(e.x-15,e.y+15);
+      ctx.lineTo(e.x+15,e.y+15);
+      ctx.closePath();
+      ctx.fill();
+      // Collision avec player
+      if(Math.abs(e.x-player.x)<20 && Math.abs(e.y-player.y)<20){
+        player.lives--;
+        enemies.splice(i,1);
+        if(player.lives<=0) gameOver=true;
       }
+      // Collision avec bullets
+      bullets.forEach((b,j)=>{
+        if(Math.abs(b.x-e.x)<20 && Math.abs(b.y-e.y)<20){
+          bullets.splice(j,1);
+          enemies.splice(i,1);
+          score+=10;
+          spaceCoins+=1;
+          localStorage.setItem('spaceCoins',spaceCoins);
+        }
+      });
+    });
 
-      requestAnimationFrame(gameLoop);
+    // --- Special Enemies ---
+    specialEnemies.forEach((se,i)=>{
+      se.y+=se.speed;
+      ctx.fillStyle="gold";
+      ctx.beginPath();
+      ctx.moveTo(se.x,se.y-15);
+      ctx.lineTo(se.x-15,se.y+15);
+      ctx.lineTo(se.x+15,se.y+15);
+      ctx.closePath();
+      ctx.fill();
+      bullets.forEach((b,j)=>{
+        if(Math.abs(b.x-se.x)<20 && Math.abs(b.y-se.y)<20){
+          bullets.splice(j,1);
+          specialEnemies.splice(i,1);
+          score+=50;
+          spaceCoins+=2; // x2
+          localStorage.setItem('spaceCoins',spaceCoins);
+        }
+      });
+    });
+
+    // --- HUD ---
+    ctx.fillStyle="white";
+    ctx.font="20px Arial";
+    ctx.fillText(`Score: ${score}`,10,30);
+    ctx.fillText(`SpaceCoins: ${spaceCoins}`,10,60);
+    ctx.fillText(`Vies: ${player.lives}`,10,90);
+
+  } else if(shopOpen){
+    // --- Shop UI ---
+    ctx.fillStyle="purple";
+    ctx.fillRect(0,0,WIDTH,HEIGHT);
+    ctx.fillStyle="white";
+    ctx.font="30px Arial";
+    ctx.fillText("=== SHOP SPACECOINS ===", WIDTH/2-200, 50);
+    shopItems.forEach((item,i)=>{
+      ctx.fillStyle="grey";
+      ctx.fillRect(200,150+i*60,300,40);
+      ctx.fillStyle="white";
+      ctx.fillText(`${item.name} (${item.cost} SC)`, 210,180+i*60);
+      // Click detection
+      canvas.addEventListener('click', function shopClick(evt){
+        const rect = canvas.getBoundingClientRect();
+        const mx = evt.clientX - rect.left;
+        const my = evt.clientY - rect.top;
+        if(mx>200 && mx<500 && my>150+i*60 && my<190+i*60){
+          if(spaceCoins>=item.cost){
+            spaceCoins-=item.cost;
+            localStorage.setItem('spaceCoins',spaceCoins);
+            shopMessage = `${item.name} acheté !`;
+          } else {
+            shopMessage = "Pas assez de SpaceCoins !";
+          }
+          shopMessageTimer=Date.now()+1500;
+        }
+      });
+    });
+    if(shopMessage && Date.now()<shopMessageTimer){
+      ctx.fillStyle="red";
+      ctx.fillText(shopMessage,200,400);
     }
+  }
 
-    gameLoop();
-  </script>
+  // --- Game Over ---
+  if(gameOver){
+    ctx.fillStyle="red";
+    ctx.font="40px Arial";
+    ctx.fillText("GAME OVER", WIDTH/2-120, HEIGHT/2-50);
+    document.getElementById('restartBtn').style.display='block';
+  }
+
+  requestAnimationFrame(loop);
+}
+
+loop();
+</script>
 </body>
 </html>
