--- a/index.html
+++ b/index.html
@@ -42,14 +42,27 @@ let shopOpen = false;
 let paused = false;
 let gameOver = false;
 
-  // Rendre les variables accessibles depuis la console
+  // === Console Cheats ===
 window.gameVars = {
-    spaceCoins: () => spaceCoins, // getter
+    // SpaceCoins
+    spaceCoins: () => spaceCoins,
     setSpaceCoins: (val) => { spaceCoins = val; saveSpaceCoins(); },
+
+    // Score
+    score: () => score,
+    setScore: (val) => { score = val; },
+
+    // Vies
     lives: () => lives,
     setLives: (val) => { lives = val; },
-    score: () => score,
-    setScore: (val) => { score = val; }
+
+    // Invulnérabilité temporaire
+    invulnerable: () => invulnerable,
+    setInvulnerable: (val) => { invulnerable = val; },
+
+    // Invulnérabilité infinie (mode triche)
+    infiniteInvuln: () => infiniteInvuln,
+    setInfiniteInvuln: (val) => { infiniteInvuln = val; },
 };
 
 
@@ -263,6 +276,7 @@ loop();
 </script>
 </body>
 </html>
+
 
 
 
