--- a/index.html
+++ b/index.html
@@ -1,283 +1,221 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Space Invaders Triangles</title>
-<style>
-  body { margin: 0; overflow: hidden; background: black; }
-  canvas { display: block; margin: 0 auto; background: black; }
-  #shootBtn, #shopBtn, #pauseBtn, #restartBtn {
-    position: absolute; padding: 10px; border-radius: 8px;
-    background: grey; color: white; font-weight: bold; user-select: none;
-  }
-  #shootBtn { right: 20px; bottom: 120px; width: 100px; height: 60px; }
-  #shopBtn { left: 50%; transform: translateX(-50%); bottom: 120px; width: 120px; height: 40px; }
-  #pauseBtn { left: 50%; transform: translateX(-50%); bottom: 60px; width: 120px; height: 40px; }
-  #restartBtn { left: 50%; transform: translateX(-50%); top: 50%; display:none; width: 140px; height: 50px; }
-</style>
+  <meta charset="UTF-8">
+  <title>Space Invaders Triangles</title>
+  <style>
+    body { background:black; margin:0; overflow:hidden; }
+    canvas { background:black; display:block; margin:0 auto; }
+    #touchControls { position:fixed; bottom:20px; left:20px; }
+    .btn {
+      background:grey; color:white; padding:15px; margin:5px;
+      border-radius:10px; font-size:20px; user-select:none;
+      display:inline-block; text-align:center;
+    }
+  </style>
 </head>
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
-<button id="shootBtn">TIR</button>
-<button id="shopBtn">SHOP</button>
-<button id="pauseBtn">PAUSE</button>
-<button id="restartBtn">RECOMMENCER</button>
+<div id="touchControls">
+  <div class="btn" id="leftBtn">◀</div>
+  <div class="btn" id="rightBtn">▶</div>
+  <div class="btn" id="shootBtn">🔥</div>
+  <div class="btn" id="shopBtn">🛒</div>
+  <div class="btn" id="pauseBtn">⏸</div>
+  <div class="btn" id="restartBtn">🔄</div>
+</div>
 
 <script>
-const canvas = document.getElementById('gameCanvas');
-const ctx = canvas.getContext('2d');
-const WIDTH = canvas.width;
-const HEIGHT = canvas.height;
+const canvas = document.getElementById("gameCanvas");
+const ctx = canvas.getContext("2d");
 
-// --- Player ---
-let player = {x: WIDTH/2, y: HEIGHT-60, size: 15, speed: 5, lives: 3};
+let playerX = canvas.width/2, playerY = canvas.height-60;
+const playerSize = 15, playerSpeed = 5;
+let lives = 3, invulnerable = false, invulnTimer = 0, infiniteInvuln = false;
 
-// --- Game ---
-let bullets = [];
-let enemies = [];
-let specialEnemies = [];
-let score = 0;
-let spaceCoins = parseInt(localStorage.getItem('spaceCoins')) || 0;
-let shopOpen = false;
-let paused = false;
-let gameOver = false;
+let bullets = [], enemies = [], score = 0;
+let spaceCoins = parseInt(localStorage.getItem("spaceCoins") || "0");
+let lastShot = 0, fireDelay = 300;
+let shopOpen = false, pause = false, gameOver = false;
+let shopMessage = "", shopMessageTimer = 0;
 
-  // === Console Cheats ===
+let keys = {};
+document.addEventListener("keydown", e => keys[e.key] = true);
+document.addEventListener("keyup", e => keys[e.key] = false);
+
+// === Touches tactiles ===
+document.getElementById("leftBtn").addEventListener("touchstart", ()=> keys["ArrowLeft"]=true);
+document.getElementById("leftBtn").addEventListener("touchend", ()=> keys["ArrowLeft"]=false);
+document.getElementById("rightBtn").addEventListener("touchstart", ()=> keys["ArrowRight"]=true);
+document.getElementById("rightBtn").addEventListener("touchend", ()=> keys["ArrowRight"]=false);
+document.getElementById("shootBtn").addEventListener("touchstart", ()=> keys[" "] = true);
+document.getElementById("shootBtn").addEventListener("touchend", ()=> keys[" "] = false);
+document.getElementById("shopBtn").addEventListener("click", ()=> shopOpen=!shopOpen);
+document.getElementById("pauseBtn").addEventListener("click", ()=> pause=!pause);
+document.getElementById("restartBtn").addEventListener("click", restartGame);
+
+function saveSpaceCoins(){ localStorage.setItem("spaceCoins", spaceCoins); }
+
+// === Cheats Console ===
 window.gameVars = {
-    // SpaceCoins
-    spaceCoins: () => spaceCoins,
-    setSpaceCoins: (val) => { spaceCoins = val; saveSpaceCoins(); },
-
-    // Score
-    score: () => score,
-    setScore: (val) => { score = val; },
-
-    // Vies
-    lives: () => lives,
-    setLives: (val) => { lives = val; },
-
-    // Invulnérabilité temporaire
-    invulnerable: () => invulnerable,
-    setInvulnerable: (val) => { invulnerable = val; },
-
-    // Invulnérabilité infinie (mode triche)
-    infiniteInvuln: () => infiniteInvuln,
-    setInfiniteInvuln: (val) => { infiniteInvuln = val; },
+  spaceCoins: ()=>spaceCoins,
+  setSpaceCoins: v=>{ spaceCoins=v; saveSpaceCoins(); },
+  score: ()=>score,
+  setScore: v=>score=v,
+  lives: ()=>lives,
+  setLives: v=>lives=v,
+  invulnerable: ()=>invulnerable,
+  setInvulnerable: v=>invulnerable=v,
+  infiniteInvuln: ()=>infiniteInvuln,
+  setInfiniteInvuln: v=>infiniteInvuln=v
 };
 
-
-// --- Fire delay ---
-let lastShotTime = 0;
-const fireDelay = 300; // ms
-
-// --- Controls ---
-let keys = {left:false,right:false,space:false};
-
-// --- Shop ---
-const shopItems = [
-  {name:"Speed x2", cost:10000, bought:false},
-  {name:"Invuln 1min", cost:20000, bought:false}
-];
-let shopMessage = "";
-let shopMessageTimer = 0;
-
-// --- Enemy spawn ---
+// === Ennemis ===
 setInterval(()=>{
-  if(!paused && !shopOpen && !gameOver){
-    const speed = 1 + Math.random()*2;
-    enemies.push({x: Math.random()*(WIDTH-30)+15, y:0, speed:speed});
+  if(!shopOpen && !pause && !gameOver){
+    const special = Math.random() < 1/(15*60*10); // ~1 ennemi toutes les 15 min
+    enemies.push({
+      x: Math.random()*canvas.width,
+      y: 0,
+      speed: 2+Math.random()*3,
+      special: special
+    });
   }
-},50); // 100 ms
+},100); // spawn rate = 100ms
 
-// --- Special Enemy spawn ---
-setInterval(()=>{
-  if(!paused && !shopOpen && !gameOver){
-    specialEnemies.push({x: Math.random()*(WIDTH-30)+15, y:0, speed:1.5});
-  }
-},900000); // 15 minutes
-
-// --- Input ---
-document.addEventListener('keydown', e=>{
-  if(e.key==="ArrowLeft") keys.left=true;
-  if(e.key==="ArrowRight") keys.right=true;
-  if(e.key===" ") keys.space=true;
-});
-document.addEventListener('keyup', e=>{
-  if(e.key==="ArrowLeft") keys.left=false;
-  if(e.key==="ArrowRight") keys.right=false;
-  if(e.key===" ") keys.space=false;
-});
-
-// --- Touch buttons ---
-document.getElementById('shootBtn').addEventListener('click', shoot);
-document.getElementById('shopBtn').addEventListener('click', ()=>{
-  shopOpen=!shopOpen;
-});
-document.getElementById('pauseBtn').addEventListener('click', ()=>{
-  paused=!paused;
-});
-document.getElementById('restartBtn').addEventListener('click', ()=>{
-  restartGame();
-  document.getElementById('restartBtn').style.display='none';
-});
-
-// --- Shoot ---
-function shoot(){
-  const now = Date.now();
-  if(now - lastShotTime < fireDelay) return;
-  bullets.push({x:player.x, y:player.y - player.size, speed:7});
-  lastShotTime = now;
-}
-
-// --- Restart ---
 function restartGame(){
-  player.lives=3;
-  player.x=WIDTH/2;
-  player.y=HEIGHT-60;
-  bullets=[];
-  enemies=[];
-  specialEnemies=[];
-  score=0;
-  gameOver=false;
+  playerX = canvas.width/2; playerY = canvas.height-60;
+  lives = 3; bullets = []; enemies = [];
+  score = 0; invulnerable = false; invulnTimer = 0; gameOver = false;
 }
 
-// --- Game loop ---
-function loop(){
-  ctx.clearRect(0,0,WIDTH,HEIGHT);
+function drawPlayer(){
+  ctx.fillStyle="white";
+  ctx.beginPath();
+  ctx.moveTo(playerX, playerY-playerSize);
+  ctx.lineTo(playerX-playerSize, playerY+playerSize);
+  ctx.lineTo(playerX+playerSize, playerY+playerSize);
+  ctx.closePath();
+  ctx.fill();
+}
 
-  if(!paused && !shopOpen && !gameOver){
-    // --- Player movement ---
-    if(keys.left && player.x-player.size>0) player.x-=player.speed;
-    if(keys.right && player.x+player.size<WIDTH) player.x+=player.speed;
-    if(keys.space) shoot();
+function drawEnemy(e){
+  ctx.fillStyle = e.special ? "gold" : "red";
+  ctx.beginPath();
+  ctx.moveTo(e.x, e.y-15);
+  ctx.lineTo(e.x-15, e.y+15);
+  ctx.lineTo(e.x+15, e.y+15);
+  ctx.closePath();
+  ctx.fill();
+}
 
-    // --- Draw player ---
-    ctx.fillStyle="white";
-    ctx.beginPath();
-    ctx.moveTo(player.x, player.y - player.size);
-    ctx.lineTo(player.x - player.size, player.y + player.size);
-    ctx.lineTo(player.x + player.size, player.y + player.size);
-    ctx.closePath();
-    ctx.fill();
+function drawBullet(b){
+  ctx.fillStyle="lime";
+  ctx.beginPath();
+  ctx.arc(b.x,b.y,5,0,Math.PI*2);
+  ctx.fill();
+}
 
-    // --- Bullets ---
-    bullets.forEach((b,i)=>{
-      b.y -= b.speed;
-      ctx.fillStyle="green";
-      ctx.beginPath();
-      ctx.arc(b.x,b.y,5,0,Math.PI*2);
-      ctx.fill();
-      if(b.y<0) bullets.splice(i,1);
-    });
+function drawText(t,x,y,s=30,c="white"){
+  ctx.fillStyle=c; ctx.font=s+"px Arial"; ctx.fillText(t,x,y);
+}
 
-    // --- Enemies ---
-    enemies.forEach((e,i)=>{
-      e.y+=e.speed;
-      ctx.fillStyle="red";
-      ctx.beginPath();
-      ctx.moveTo(e.x,e.y-15);
-      ctx.lineTo(e.x-15,e.y+15);
-      ctx.lineTo(e.x+15,e.y+15);
-      ctx.closePath();
-      ctx.fill();
-      // Collision avec player
-      if(Math.abs(e.x-player.x)<20 && Math.abs(e.y-player.y)<20){
-        player.lives--;
-        enemies.splice(i,1);
-        if(player.lives<=0) gameOver=true;
+function update(){
+  if(pause || gameOver){ drawUI(); return; }
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  // Déplacements
+  if(keys["ArrowLeft"] && playerX-playerSize>0) playerX-=playerSpeed;
+  if(keys["ArrowRight"] && playerX+playerSize<canvas.width) playerX+=playerSpeed;
+  if(keys[" "] && Date.now()-lastShot>fireDelay){
+    bullets.push({x:playerX,y:playerY-playerSize});
+    lastShot=Date.now();
+  }
+
+  // Bullets
+  bullets.forEach(b=> b.y-=7);
+  bullets = bullets.filter(b=> b.y>0);
+
+  // Ennemis
+  enemies.forEach(e=> e.y+=e.speed);
+  enemies = enemies.filter(e=> e.y<canvas.height);
+
+  // Collisions
+  bullets.forEach((b,bi)=>{
+    enemies.forEach((e,ei)=>{
+      if(Math.abs(b.x-e.x)<20 && Math.abs(b.y-e.y)<20){
+        enemies.splice(ei,1); bullets.splice(bi,1);
+        score+=10;
+        spaceCoins += e.special ? 2 : 1;
+        saveSpaceCoins();
       }
-      // Collision avec bullets
-      bullets.forEach((b,j)=>{
-        if(Math.abs(b.x-e.x)<20 && Math.abs(b.y-e.y)<20){
-          bullets.splice(j,1);
-          enemies.splice(i,1);
-          score+=10;
-          spaceCoins+=1;
-          localStorage.setItem('spaceCoins',spaceCoins);
-        }
-      });
     });
+  });
 
-    // --- Special Enemies ---
-    specialEnemies.forEach((se,i)=>{
-      se.y+=se.speed;
-      ctx.fillStyle="gold";
-      ctx.beginPath();
-      ctx.moveTo(se.x,se.y-15);
-      ctx.lineTo(se.x-15,se.y+15);
-      ctx.lineTo(se.x+15,se.y+15);
-      ctx.closePath();
-      ctx.fill();
-      bullets.forEach((b,j)=>{
-        if(Math.abs(b.x-se.x)<20 && Math.abs(b.y-se.y)<20){
-          bullets.splice(j,1);
-          specialEnemies.splice(i,1);
-          score+=50;
-          spaceCoins+=2; // x2
-          localStorage.setItem('spaceCoins',spaceCoins);
-        }
-      });
-    });
+  enemies.forEach((e,ei)=>{
+    if(Math.abs(playerX-e.x)<20 && Math.abs(playerY-e.y)<20){
+      if(!invulnerable && !infiniteInvuln){
+        lives--; invulnerable=true; invulnTimer=Date.now();
+      }
+      enemies.splice(ei,1);
+    }
+  });
 
-    // --- HUD ---
-    ctx.fillStyle="white";
-    ctx.font="20px Arial";
-    ctx.fillText(`Score: ${score}`,10,30);
-    ctx.fillText(`SpaceCoins: ${spaceCoins}`,10,60);
-    ctx.fillText(`Vies: ${player.lives}`,10,90);
+  if(invulnerable && Date.now()-invulnTimer>2000) invulnerable=false;
+  if(lives<=0) gameOver=true;
 
-  } else if(shopOpen){
-    // --- Shop UI ---
-    ctx.fillStyle="purple";
-    ctx.fillRect(0,0,WIDTH,HEIGHT);
-    ctx.fillStyle="white";
-    ctx.font="30px Arial";
-    ctx.fillText("=== SHOP SPACECOINS ===", WIDTH/2-200, 50);
-    shopItems.forEach((item,i)=>{
-      ctx.fillStyle="grey";
-      ctx.fillRect(200,150+i*60,300,40);
-      ctx.fillStyle="white";
-      ctx.fillText(`${item.name} (${item.cost} SC)`, 210,180+i*60);
-      // Click detection
-      canvas.addEventListener('click', function shopClick(evt){
-        const rect = canvas.getBoundingClientRect();
-        const mx = evt.clientX - rect.left;
-        const my = evt.clientY - rect.top;
-        if(mx>200 && mx<500 && my>150+i*60 && my<190+i*60){
-          if(spaceCoins>=item.cost){
-            spaceCoins-=item.cost;
-            localStorage.setItem('spaceCoins',spaceCoins);
-            shopMessage = `${item.name} acheté !`;
-          } else {
-            shopMessage = "Pas assez de SpaceCoins !";
-          }
-          shopMessageTimer=Date.now()+1500;
-        }
-      });
-    });
+  // Dessin
+  drawPlayer();
+  enemies.forEach(drawEnemy);
+  bullets.forEach(drawBullet);
+
+  drawText("Score: "+score,10,30);
+  drawText("SpaceCoins: "+spaceCoins,10,60);
+  drawText("Vies: "+lives,10,90);
+
+  drawUI();
+}
+
+function drawUI(){
+  if(shopOpen){
+    ctx.fillStyle="purple"; ctx.fillRect(100,100,600,400);
+    drawText("=== SHOP SPACECOINS ===",200,150,30);
+    drawText("1) Speed x2 (10000 SC)",200,220,25);
+    drawText("2) Invulnérabilité 1min (20000 SC)",200,260,25);
+    drawText("Tes SC: "+spaceCoins,200,320,25);
     if(shopMessage && Date.now()<shopMessageTimer){
-      ctx.fillStyle="red";
-      ctx.fillText(shopMessage,200,400);
+      drawText(shopMessage,200,360,25,"red");
     }
   }
-
-  // --- Game Over ---
-  if(gameOver){
-    ctx.fillStyle="red";
-    ctx.font="40px Arial";
-    ctx.fillText("GAME OVER", WIDTH/2-120, HEIGHT/2-50);
-    document.getElementById('restartBtn').style.display='block';
+  if(pause){
+    drawText("=== PAUSE ===",canvas.width/2-100,canvas.height/2,40,"yellow");
   }
-
-  requestAnimationFrame(loop);
+  if(gameOver){
+    drawText("=== GAME OVER ===",canvas.width/2-120,canvas.height/2-20,40,"red");
+    drawText("Appuie sur 🔄 pour recommencer",canvas.width/2-180,canvas.height/2+40,25,"white");
+  }
 }
 
-loop();
+setInterval(update,1000/60);
+
+// === Shop (clic souris) ===
+canvas.addEventListener("click",e=>{
+  if(shopOpen){
+    const mx=e.offsetX,my=e.offsetY;
+    if(my>200 && my<230){ // speed
+      if(spaceCoins>=10000){
+        spaceCoins-=10000; saveSpaceCoins();
+        playerSpeed*=2; shopMessage="Vitesse augmentée !"; shopMessageTimer=Date.now()+2000;
+      } else { shopMessage="Pas assez de SC !"; shopMessageTimer=Date.now()+2000; }
+    }
+    if(my>240 && my<270){ // invuln
+      if(spaceCoins>=20000){
+        spaceCoins-=20000; saveSpaceCoins();
+        invulnerable=true; invulnTimer=Date.now(); shopMessage="Invulnérabilité activée !"; shopMessageTimer=Date.now()+2000;
+      } else { shopMessage="Pas assez de SC !"; shopMessageTimer=Date.now()+2000; }
+    }
+  }
+});
 </script>
 </body>
 </html>
-
-
-
-
-
