--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       form.addEventListener('submit', function(e) {
         e.preventDefault();
         if (pwd.value === "pickachunoir/PRIV08") {
-          alert("clebinet.github.io/priv-08:..-space-invader")
+          alert("clebinet.github.io/priv-08-..-space-invader")
         } else {
           alert("mot de passe incorrect")
         }
